简单用一个dialog的库

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,7 @@ dependencies {
 
     implementation 'androidx.multidex:multidex:2.0.0'
     implementation 'com.kc:uiwatcher2:1.0.0'
+
+    // https://github.com/TutorialsAndroid/KAlertDialog
+    implementation 'com.github.TutorialsAndroid:KAlertDialog:v14.0.19'
 }
