多文本生成图片

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,6 +54,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.KProgressActivity" />
+        <activity android:name=".activity.TextToBitmapActivity" />
     </application>
 
 </manifest>
